<resources>
    <string name="app_name">WanandroidKotlin</string>

    <string name="home">首页</string>
    <string name="project">项目</string>
    <string name="navigation">导航</string>
    <string name="wx">公众号</string>
    <string name="me">我的</string>

    <string name="square">广场</string>
    <string name="system">体系</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="repeat_password">确认密码</string>
    <string name="username_or_psw_can_not_be_empty">用户名或密码不能为空</string>
    <string name="click_to_login">点击登录</string>
    <string name="already_logged_in">已登录</string>
    <string name="login_failed">登录失败</string>
    <string name="logging">正在登录</string>
    <string name="registering">正在注册</string>
    <string name="password_is_identical">两次密码输入不一致</string>
    <string name="register_failed">注册失败</string>
    <string name="logout">退出登录</string>
    <string name="tips">温馨提示</string>
    <string name="logout_or_not">确定要退出登录吗？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="dash">--</string>

    <string name="search">搜索</string>

    <string name="exit_app">再按一次退出程序</string>

    <string name="retry">轻触屏幕重新加载</string>
    <string name="state_empty">这里什么都没有</string>
    <string name="state_error">出错啦</string>
    <string name="state_network_error">网络错误</string>

    <string name="search_hint">输入关键词搜索</string>
    <string name="hot_key">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空</string>
    <string name="search_history_empty">没有搜索历史数据，快去搜索吧</string>

    <string name="collect_success">收藏成功</string>
    <string name="uncollect_success">取消收藏</string>

    <string name="my_integral">我的积分</string>
    <string name="ranking_list">排行榜</string>
    <string name="my_collection">我的收藏</string>
    <string name="open_source_website">开源网站</string>
    <string name="project_address">项目地址</string>
    <string name="open_api">玩Android开放API</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
