<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/bottom_nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_nav_home"
        />
    <item android:id="@+id/bottom_nav_project"
        android:title="@string/project"
        android:icon="@drawable/ic_nav_project"
        />
    <item android:id="@+id/bottom_nav_navigation"
        android:title="@string/navigation"
        android:icon="@drawable/ic_nav_nav"
        />
    <item android:id="@+id/bottom_nav_wx"
        android:title="@string/wx"
        android:icon="@drawable/ic_nav_wx"
        />
    <item android:id="@+id/bottom_nav_me"
        android:title="@string/me"
        android:icon="@drawable/ic_nav_me"
        />
</menu>