<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/default_background">
        <com.lzk.wanandroidkotlin.weight.ClearEditTextView
            android:id="@+id/search_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_gravity="center"
            android:hint="@string/search_hint"
            android:textColor="@color/default_light"
            android:textColorHint="@color/default_light"
            android:textSize="16sp"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/item_tag_shape"
                android:text="@string/hot_key"
                android:textSize="16sp"
                />
            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/search_flow_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/default_light"
                android:text="@string/search_history"
                android:textSize="16sp"
                android:layout_alignParentStart="true"
                />
            <TextView
                android:id="@+id/search_clear_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/default_light"
                android:text="@string/clear"
                android:textSize="16sp"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:overScrollMode="never"/>
    </LinearLayout>
</LinearLayout>