<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.RegisterActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:contentInsetRight="0dp"
        android:background="@color/default_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/default_primary"
            android:text="@string/register"/>
    </androidx.appcompat.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:elevation="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_username"
                        android:layout_marginEnd="20dp"/>
                    <com.lzk.wanandroidkotlin.weight.ClearEditTextView
                        android:id="@+id/register_username_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/username"
                        android:textColorHint="@color/default_light"
                        android:padding="5dp"
                        android:textSize="@dimen/title_text_size"
                        android:textColor="@color/default_primary"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_password"
                        android:layout_marginEnd="20dp"/>
                    <com.lzk.wanandroidkotlin.weight.PasswordEditTextView
                        android:id="@+id/register_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/password"
                        android:textColorHint="@color/default_light"
                        android:padding="5dp"
                        android:textSize="@dimen/title_text_size"
                        android:textColor="@color/default_primary"
                        android:inputType="textPassword"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_password"
                        android:layout_marginEnd="20dp"/>
                    <com.lzk.wanandroidkotlin.weight.PasswordEditTextView
                        android:id="@+id/register_repeat_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/repeat_password"
                        android:textColorHint="@color/default_light"
                        android:padding="5dp"
                        android:textSize="@dimen/title_text_size"
                        android:textColor="@color/default_primary"
                        android:inputType="textPassword"
                        />
                </LinearLayout>
                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/register"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:textColor="@color/default_background"
                    android:textSize="@dimen/title_text_size"
                    android:layout_marginTop="20dp"
                    android:background="@color/secondary_background"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</LinearLayout>