<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/me_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.me.MeFragment">

    <com.scwang.smartrefresh.layout.header.ClassicsHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/me_login_status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_tag"
                android:layout_gravity="start"
                android:elevation="10dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:textSize="@dimen/article_tag"
                android:text="@string/click_to_login"
                android:gravity="center"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/me_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/item_background"
                app:cardCornerRadius="5dp"
                android:elevation="8dp"
                android:foreground="?android:attr/selectableItemBackground">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center_horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/me_login_portrait_iv"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_launcher_round"
                        android:scaleType="centerCrop"
                        />
                    <TextView
                        android:id="@+id/me_login_nickname_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/title_text_size"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:id="@+id/me_login_username_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/nickname"
                        android:textSize="@dimen/article_title"
                        android:textColor="@color/default_light"
                        android:text="--"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:layout_marginTop="10dp"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        >
                        <TextView
                            android:id="@+id/me_login_level_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/article_content"
                            android:textColor="@color/default_light"
                            android:drawableTop="@drawable/level"
                            android:gravity="center_horizontal"
                            android:text="--"
                            />
                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/divider"/>
                        <TextView
                            android:id="@+id/me_login_rank_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/article_content"
                            android:textColor="@color/default_light"
                            android:drawableTop="@drawable/rank"
                            android:gravity="center_horizontal"
                            android:text="--"
                            />
                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/divider"/>
                        <TextView
                            android:id="@+id/me_login_integral_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/article_content"
                            android:textColor="@color/default_light"
                            android:drawableTop="@drawable/integral"
                            android:gravity="center_horizontal"
                            android:text="--"
                            />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </FrameLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/item_background"
            app:cardCornerRadius="5dp"
            android:elevation="8dp"
            >
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:gravity="center_horizontal">
                    <RelativeLayout
                        android:id="@+id/me_my_integral_rl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_integral"
                            android:drawableStart="@drawable/me_integral"
                            android:gravity="center_vertical"
                            android:drawablePadding="20dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:textSize="16sp"
                            android:textColor="@color/default_primary"
                            />
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true">
                            <TextView
                                android:id="@+id/me_my_integral_num_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textColor="@color/secondary_background"
                                android:textStyle="bold"
                                />
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_right"
                                />
                        </LinearLayout>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/me_rank_list_rl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ranking_list"
                            android:drawableStart="@drawable/me_rank"
                            android:gravity="center_vertical"
                            android:drawablePadding="20dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:textSize="16sp"
                            android:textColor="@color/default_primary"
                            />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_right"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/me_my_collection_rl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_collection"
                            android:drawableStart="@drawable/me_collect"
                            android:gravity="center_vertical"
                            android:drawablePadding="20dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:textSize="16sp"
                            android:textColor="@color/default_primary"
                            />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_right"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/me_project_address_rl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/project_address"
                            android:drawableStart="@drawable/me_project_address"
                            android:gravity="center_vertical"
                            android:drawablePadding="20dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:textSize="16sp"
                            android:textColor="@color/default_primary"
                            />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_right"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/me_open_source_website_rl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/open_source_website"
                            android:drawableStart="@drawable/me_website"
                            android:gravity="center_vertical"
                            android:drawablePadding="20dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:textSize="16sp"
                            android:textColor="@color/default_primary"
                            />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_right"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/me_open_api_rl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/open_api"
                            android:drawableStart="@drawable/me_api"
                            android:gravity="center_vertical"
                            android:drawablePadding="20dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:textSize="16sp"
                            android:textColor="@color/default_primary"
                            />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_right"
                            />
                    </RelativeLayout>
                    <Button
                        android:id="@+id/me_logout_btn"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/exit_login_btn_shape"
                        android:textSize="@dimen/title_text_size"
                        android:textColor="@color/white"
                        android:text="@string/logout"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="10dp"
                        />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</com.scwang.smartrefresh.layout.SmartRefreshLayout>